<resources>
    <string name="app_name">TODO List</string>
    <string name="app_users_title">Users list</string>
    <string name="app_user_edit">Edit user</string>
    <string name="hint_btn_description">Press + to add a deal.</string>
    <string name="hint_btn_user_description">Press + to add a user.</string>
    <string name="description">Description</string>
    <string name="in_charge">Who will do task</string>
    <string name="who">Who: </string>
    <string name="title">Title</string>
    <string name="name">User name</string>
    <string name="mnu_edit">Edit event</string>
    <string name="mnu_complete">Completed</string>
    <string name="mnu_delete">Delete event</string>
    <string name="mnu_edit_user">Edit user</string>
    <string name="mnu_check_user_active">Activate</string>
    <string name="mnu_check_user_non_active">Disable</string>
    <string name="mnu_delete_user">Delete user</string>
    <string name="symbol">&#8942;</string>
    <string name="hint_enter_title">Enter title of task...</string>
    <string name="hint_enter_description">Enter details of task...</string>
    <string name="hint_enter_name">Enter user name</string>
    <string name="btn_add">Add task</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_save">Save</string>
    <string name="btn_add_user">Add new user</string>
    <string name="adding_task_title">Add a task</string>
    <string name="err_title">Enter 3 symbols minimum for title of task.</string>
    <string name="err_name">Enter 3 symbols minimum for user name.</string>
    <string name="err_description">Enter minimum 5 symbols for description.</string>
    <string name="side_menu_header_title">Task management</string>
    <string name="side_menu_profile_1">Choose task priority to create</string>
    <string name="side_menu_priority_height">Height priority task</string>
    <string name="side_menu_priority_medium">Medium priority task</string>
    <string name="side_menu_priority_low">Low priority task</string>
    <string name="side_menu_profile_2">Manage users</string>
    <string name="side_menu_user_add">Add user</string>
    <string name="side_menu_user_delete">Delete user</string>
    <string name="tabtitle">Regular task</string>
    <string name="tabtitle_urgent">Urgent task</string>
    <string name="tabtitle_important">Important task</string>
    <string name="task_type">Type of task:</string>
</resources>
