<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="1dp"
    android:weightSum="1">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editName"
        android:inputType="text"
        android:ems="10"
        android:hint="@string/hint_enter_name"
        android:layout_margin="10dp"
        android:elevation="1dp" />

    <Button
        android:text="@string/btn_add_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnOK"
        android:layout_margin="10dp" />

    <Button
        android:text="@string/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnCancel"
        android:layout_margin="10dp" />
</LinearLayout>