<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="1dp"
    android:weightSum="1">



    <fragment
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:id="@+id/add_task_tabs"
        android:name="ru.kartsev.dmitry.todolist.fragments.AddTaskTabsFragment" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTitle"
        android:inputType="text"
        android:ems="10"
        android:hint="@string/hint_enter_title"
        android:layout_margin="10dp"
        android:elevation="1dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:lines="3"
        android:ems="10"
        android:id="@+id/editDescription"
        android:layout_margin="10dp"
        android:elevation="1dp"
        android:hint="@string/hint_enter_description"
        android:layout_weight="0.21" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/who"
            android:layout_width="65dp"
            android:id="@+id/textView"
            android:textSize="16sp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content" />

        <Spinner
            android:layout_width="296dp"
            android:id="@+id/spinnerInCharge"
            android:layout_alignBottom="@+id/textView"
            android:layout_toRightOf="@+id/textView"
            android:layout_toEndOf="@+id/textView"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <Button
        android:text="@string/btn_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnOK"
        android:layout_margin="10dp" />

    <Button
        android:text="@string/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnCancel"
        android:layout_margin="10dp" />
</LinearLayout>